# swagger-output.json
@@ -532,6 +532,44 @@
         }
       }
     },
+    "/api/v1/sports/deleteUserSport/{userSportId}": {
+      "delete": {
+        "tags": [
+          "Sports"
+        ],
+        "description": "Delete a sport from a user",
+        "parameters": [
+          {
+            "name": "userSportId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/api/v1/user/updateDetails": {
       "put": {
         "tags": [
